--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,9 @@ header h2{
 img{
     float: left;
 }
-shadow {
+h1{
+    text-shadow: 2px 2px 2px rgb(128, 0, 0);
+  }
+  h2{
     text-shadow: 2px 2px 2px rgb(128, 0, 0);
   }
