--- a/styles/main.css
+++ b/styles/main.css
@@ -23,3 +23,11 @@ img{
 .shadow {
     text-shadow: 2px 2px 2px rgb(128, 0, 0);
   }
+  
+  img {
+    float: left;
+  }
+  
+  p.clear {
+    clear: left;
+  }
