--- a/styles/main.css
+++ b/styles/main.css
@@ -50,7 +50,8 @@ img{
   main h3{
     margin-top: 3em;
     font-size: 105%;
-    margin: 3em 2em 1.5em
+    margin: 3em 2em 1.5em;
+    border: 5px double blue;
   }
 
   #list{
