--- a/styles/main.css
+++ b/styles/main.css
@@ -43,8 +43,10 @@ img{
     float: left;
   }
   
-  main {
+  main nav {
     clear: left;
+    margin-top: 1.5em;
+    
   }
 
   main h3{
@@ -52,6 +54,9 @@ img{
     font-size: 105%;
     margin: 3em 2em 1.5em;
     border: 5px double blue;
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 4px red;
+    padding: 1em;
   }
 
   #list{
