--- a/styles/main.css
+++ b/styles/main.css
@@ -45,7 +45,11 @@ img{
   
   main nav {
     clear: left;
-    margin-top: 1.5em;
+    margin: 1.5em 2em 1.5em;
+    border: 5px dashed blue;
+    border-radius: 20px;
+    box-shadow: 3px 4px 4px red;
+    padding: 1em 1em 1em;
     
   }
 
@@ -58,7 +62,9 @@ img{
     box-shadow: 3px 3px 4px 4px red;
     padding: 1em;
   }
-
+  div.contact{
+    margin: 1.5em 2em 0em 2em;
+  }
   #list{
     line-height: 1.5em;
   }
