--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,7 @@ img{
     border: 5px dashed blue;
     border-radius: 20px;
     box-shadow: 3px 4px 4px red;
-    padding: 1em 1em 1em;
+    padding: 0.5em 0.5em 0.5em;
     
   }
 
@@ -60,10 +60,14 @@ img{
     border: 5px double blue;
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
-    padding: 1em;
+    padding: 1em 1em 1em;
   }
   div.contact{
     margin: 1.5em 2em 0em 2em;
+    border: 5px dotted blue;
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 4px red;
+    padding: 1em 1em 1em;
   }
   #list{
     line-height: 1.5em;
