--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@ body {
     padding: 15px 1.5em;
     border: 1px solid black;
     border-radius: 25px;
-    box-shadow: to 5px 5px 0 0;
+    box-shadow: 5px 5px 0 0;
 
     
 }
