--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ body {
     margin-left: 10px;
     width: 1000px;
     background-color: white;
-    margin-bottom: 15px auto;
+    margin: 15px auto;
     padding: 15px 1.5em;
     border: 1px solid black;
     border-radius: 25px;
