--- a/styles/main.css
+++ b/styles/main.css
@@ -48,7 +48,7 @@ img{
     margin: 1.5em 2em 1.5em;
     border: 5px dashed blue;
     border-radius: 20px;
-    box-shadow: 3px 4px 4px red;
+    box-shadow: 3px 4px 4px 4px red;
     padding: 0.5em 0.5em 0.5em;
     
   }
