--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,7 @@ img{
     
     font-size: 105%;
     margin: 3em 2em 1.5em;
-    border: 5px double solid blue;
+    border: 5px double blue;
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
     padding: 1em 1em 1em;
