--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@ header h2{
 }
 img{
     float: left;
-    margin-left: 10px auto;
+    margin-left: 30px;
 }
 .shadow {
     text-shadow: 2px 2px 2px rgb(128, 0, 0);
