--- a/styles/project.css
+++ b/styles/project.css
@@ -48,5 +48,14 @@ html{
         column-gap: 2em;
         margin-left: 2em;
       }
+      article h3 {
+        column-span: all;
+      }
+      article img{
+        float: left;
+        margin-right: 1em;
+        margin-bottom: 1em;
+      }
+      
       
       
