--- a/styles/project.css
+++ b/styles/project.css
@@ -7,7 +7,7 @@ html{
         font-family: Arial, Helvetica, sans-serif;
         font-size: 100%;
         margin-left: 10px;
-        width: 1000px;
+        width: 90%;
         background-color: white;
         margin: 15px auto;
         padding: 15px 1.5em;
@@ -56,6 +56,36 @@ html{
         margin-right: 1em;
         margin-bottom: 1em;
       }
-      
-      
+      article p::first-letter{
+        font-size: 3em;
+        font-weight: bold;
+        font-style: italic;
+        color: lightgreen;
+
+      }
+      aside{
+      width: 20%;
+      float: right;
+      padding: 0.1em 1em 1em;
+      background: color #ffebc6;
+      }
+      footer{
+        clear: both;
+        border-top: 2px solid maroon;
+      }
+
+      footer{
+        text-align: center;
+        font-size: 80%;
+      }
+      p.fixed{
+        width: auto;
+        position: fixed;
+        bottom: 35%;
+        right: 0;
+        border: 3px solid darkgreen;
+        background-color: lightgreen;
+
+      }
+
       
