--- a/styles/project.css
+++ b/styles/project.css
@@ -41,7 +41,7 @@ html{
         text-shadow: 2px 2px 2px rgb(128, 0, 0);
       }
       article{
-        width: 70;
+        width: 70%;
         float: left;
         column-count: 2;
         column-rule: 2px dotted maroon;
