--- a/styles/project.css
+++ b/styles/project.css
@@ -67,7 +67,7 @@ html{
       width: 20%;
       float: right;
       padding: 0.1em 1em 1em;
-      background: color #ffebc6;
+      background-color:  #ffebc6;
       }
       footer{
         clear: both;
