--- a/styles/project.css
+++ b/styles/project.css
@@ -68,7 +68,7 @@ html{
       float: right;
       padding: 0.1em 1em 1em;
       background-color:  #ffebc6;
-      border-bottom: 2px solid maroon;
+      border-top: 2px solid maroon;
 
       }
 
