--- a/styles/project.css
+++ b/styles/project.css
@@ -85,5 +85,6 @@ html{
       right: 0;
       border: 3px solid darkgreen;
       background-color: lightgreen;
+      padding: 0.1em 1em 1em;
 
     }
