--- a/styles/project.css
+++ b/styles/project.css
@@ -73,6 +73,7 @@ html{
     footer{
       clear: both;
       border-top: 2px solid maroon;
+      border-bottom: 2px solid maroon;
     }
 
     footer{
