--- a/styles/project.css
+++ b/styles/project.css
@@ -72,7 +72,7 @@ html{
     }
     header{
       clear: both;
-      border-top: 2px solid maroon;
+      border-bottom: 2px solid maroon;
     }
     footer{
       clear: both;
