--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,11 +1,12 @@
 
-article {
-  clear:left
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 40px;
+ article {
+  display: block;
+  list-style-type: upper-roman;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 40px;
 }
 
 
