--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,13 +1,8 @@
 
  article {
-  display: block;
-  list-style-type: upper-roman;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 40px;
-}
+  clear:left
+  padding: 1em 0;
+  }
 
 
 #nav_menu ul { list-style-type: none; }
