--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -1,7 +1,8 @@
 
-p::first-letter {
-    font-size: large;
-    font-style: italic bold;
+article p::first-letter {
+    font-size: 3em;
+    font-weight: bold;
+    font-style: italic;
 }
     
 
