--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -6,7 +6,9 @@ article p::first-letter {
     font-weight: bold;
     font-style: italic;
 }
-    
+img{
+    float: left;
+    margin-left: 30px;  
 
 
 
