--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -11,7 +11,25 @@ img {
     margin-left: 30px;
 }
 
+ul {
+    display: block;
+    list-style-type: square;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
+  }
 
+  ol {
+    display: block;
+    list-style-type: upper-roman;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
+  }
 
 
 #nav_menu ul { list-style-type: none; }
