--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -16,7 +16,19 @@ article img {
     margin-right: 1em;
     margin-bottom: 1em;
   }
+
+  body {
+    font-size: 100%;
+    width: 95%;
+    background-color: white;
+    margin: 15px auto;
+    padding: 15px 1.5em;
+    border: 1px solid black;
+    border-radius: 25px;
+    box-shadow: 5px 5px 0 0;
+
     
+}
       
 
 
