--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -38,7 +38,12 @@ article{
   column-gap: 2em;
   margin-left: 2em;
 }
-
+aside{
+  width: 20%;
+  float: right;
+  padding: 0.1em 1em 1em;
+  background-color: #ffebc6;
+  }
 
 
   ol {
