--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -55,7 +55,15 @@ aside{
     margin-right: 0;
     padding-left: 40px;
   }
-
+  ol {
+    display: block;
+    list-style-type: upper-roman;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
+  }
 
 #nav_menu ul { list-style-type: none; }
 #nav_menu ul li { float: left; }
