--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -80,3 +80,13 @@ aside{
     border-right: 2px solid white; }
 #nav_menu ul li a.lastitem { border-right: none; }	
 #nav_menu ul li a.current { color: yellow; }
+
+
+header{
+  clear: both;
+  border-bottom: 2px solid blue;
+}
+footer{
+  clear: both;
+  border-top: 2px solid blue;
+}
