--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -39,6 +39,7 @@ article{
   margin-left: 2em;
 }
 aside{
+  
   width: 20%;
   float: right;
   padding: 0.1em 1em 1em;
@@ -88,5 +89,6 @@ header{
 }
 footer{
   clear: both;
+  text-align: center;
   border-top: 2px solid blue;
 }
