--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -3,15 +3,13 @@ html{
   background-image: linear-gradient(to left, white 0%, Lightblue 100%);
   }
 
-  .dashed-lines:after {
-    content:"";
-    position: absolute;
-    z-index: -1;
-    top: -50px;
-    bottom: -50px;
-    left: 50%;
-    border-left: 2px dotted blue;
+
+  h1 {
+  color: blue;
   }
+  h2 {
+    color: blue;
+    }
 
 article {
     clear: left;
