--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -54,6 +54,7 @@ article {
 aside{
   
   width: 20%;
+  border-style: solid;
   float: right;
   padding: 0.1em 1em 1em;
   background-color: #ffebc6;
