--- a/styles/Exam1menu.css
+++ b/styles/Exam1menu.css
@@ -56,7 +56,7 @@ aside {
   position:fixed;
   width: 20%;
   border-style: solid;
-  float: left;
+  float: right;
   padding: 0.1em 1em 1em;
   background-color: #ffebc6;
   }
