--- a/styles/table.css
+++ b/styles/table.css
@@ -34,6 +34,27 @@ html, body {
     table.second thead tr:first-child{     
         border-bottom: 2px solid purple;
     }
+
+    table.third {
+           
+            border-collapse: collapse; 
+            border: 2px solid orangered;   
+            caption-side: top;
+        }
+        table.third th {
+            background-color: lightgreen;
+        }
+        table.third th, table.third td {
+            padding: 0.7em;  
+            vertical-align: middle;
+            border: 2px solid orangered;
+        }
+        table.third thead tr:first-child{     
+            border-bottom: 2px solid orangered;
+    }
+
+
+
     @media only screen and (max-width: 425px) {
         th, td {
             display: block;
