--- a/styles/table.css
+++ b/styles/table.css
@@ -37,7 +37,8 @@ html, body {
 
     table.third {
            
-            border-collapse: collapse; 
+            border-collapse: collapse;
+            background-color: lightgreen; 
             border: 2px solid orangered;   
             caption-side: top;
             
