--- a/styles/table.css
+++ b/styles/table.css
@@ -49,7 +49,7 @@ html, body {
         }
         table.third th, table.third td {
             padding: 0.7em;  
-            vertical-align: middle;
+            vertical-align: top;
             
         }
          
