--- a/styles/table.css
+++ b/styles/table.css
@@ -37,8 +37,7 @@ html, body {
 
     table.third {
            
-            border-collapse: collapse; 
-            border: 2px solid orangered;   
+            border-collapse: collapse;    
             caption-side: top;
             
         }
@@ -52,7 +51,10 @@ html, body {
             font-style: bold;
             
         }
-         
+        
+        table.third thead tr:first-child {
+        border-top: 2px solid orangered;
+        }
             @media only screen and (max-width: 425px) {
         th, td {
             display: block;
