--- a/styles/table.css
+++ b/styles/table.css
@@ -54,6 +54,7 @@ html, body {
         
         table.third thead tr:first-child {
         border-top: 2px solid orangered;
+        background-color: lightgreen;
         }
             @media only screen and (max-width: 425px) {
         th, td {
