--- a/styles/table.css
+++ b/styles/table.css
@@ -55,6 +55,7 @@ html, body {
         table.third thead tr:first-child {
         border-top: 2px solid orangered;
         background-color: lightgreen;
+        font-style: bold;
         }
             @media only screen and (max-width: 425px) {
         th, td {
